config api